# s3-browser

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  build.sh  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_test.txt  s3-browser.sh  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
s3_browser/: argparse.py  bookmarks.py  cli.py  client.py  completion.py  paths.py  ps1.py  tokeniser.py  utils.py
s3_browser/tests/: test_bookmarks.py  test_cli.py  test_completion.py  test_paths.py  test_ps1.py  test_tokeniser.py  test_utils.py
scripts/: bootstrap.sh
