[metadata]
name = S3 Browser
summary = An interactive utility for browsing S3 like a regular directory tree
description_file = README.md
author = @giftig
license = MIT

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503,W504

[isort]
combine_as_imports = true
include_trailing_comma = false
line_length = 88
known_first_party = s3_browser
known_third_party = boto3,pytest
multi_line_output = 3
order_by_type = false
